domain, service, dto 코딩컨벤션 수정